--- a/pom.xml
+++ b/pom.xml
@@ -60,9 +60,11 @@
         </dependency>
 
         <dependency>
-            <groupId>org.hsqldb</groupId>
-            <artifactId>hsqldb</artifactId>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.11</version>
         </dependency>
+
     </dependencies>
 
 	<build>
